2013-12-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Document subw uses that can be enabled once bug #2227 is fixed.

2013-12-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/float_single.c:
	  Fix float comparison, bug #2170.
	* support/regression/tests/gcc-torture-execute-20050826-1.c:
	  Use smaller array for stm8.

2013-12-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20040313-1.c:
	  Enabled test.

2013-12-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/ctype.h,
	  device/include/stdio.h,
	  device/lib/incl.mk,
	  device/lib/_is*.c,
	  device/lib/is*.c,
	  device/lib/tolower.c,
	  device/lib/toupper.c,
	  support/regression/tests/ctype.c:
	  Fix ctype.h and anything in there.

2013-12-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/z80/crt0.s,
	  device/lib/z180/crt0.s,
	  device/lib/r3ka/crt0.s,
	  device/lib/r2k/crt0.s,
	  device/lib/gbz80/crt0.s:
	  Fix bug #2153.

2013-12-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (stringToSymbol, createIf): fixed bug 2163
	* support/regression/tests/gcc-torture-execute-string-opt-5.c: enabled for
	  mcs51 with smaller buffer	
	* support/regression/tests/bug-2163.c: new, added

2013-12-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/lib/tlcs90/t90regs.s,
	  device/lib/tlcs90/crt0.s:
	  crt0 for tlcs90.

2013-12-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/peep.c:
	  Fix bug #2182.
	* src/SDCCralloc.hpp:
	  Enable warning for non-connected live ranges for hc08 and s08.

2013-12-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c: Fix cost for built-in strncpy().

2013-12-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (glue): fixed bug 2212